# hermes-bt-panel

./: .gitignore  README.md  pyproject.toml  pytest.ini  test.py
.github/workflows/: ci.yml  release.yml
.hermes/skills/hermes-bt-panel/: SKILL.md
openspec/: config.yaml
src/btpanel/: __init__.py  client.py
src/btpanel/api/: __init__.py  backup.py  cron.py  database.py  docker.py  files.py  sites.py  ssl.py  system.py  system_settings.py
tests/: test_api.py
